  * Update upstream URL in debian/copyright.
  * Bump Standards-Version to 3.7.3 (no changes).
  * Drop the XS- prefix from Vcs-Git and Vcs-Browser fields in debian/control.
  * Install the upstream ChangeLog.

  [ Julien Cristau ]
  * New upstream release (needed for mesa 7.1 and newer xserver).
  * Note: this release removes the memory manager (TTM) interface used by the
    i915tex dri driver.

  [ Timo Aaltonen ]
  * Bump the shlibs to 2.3.1.

 -- Timo Aaltonen <tepsipakki@ubuntu.com>  Tue, 01 Jul 2008 18:20:08 +0300

libdrm (2.3.0-4) unstable; urgency=low

  [ David Nusinow ]
  * Add NEWS.Debian explaining the change in the last upload to interested
    administrators.

  [ Julien Cristau ]
  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Fri, 20 Apr 2007 05:06:34 +0200

libdrm (2.3.0-3) experimental; urgency=low

  * Add myself to uploaders
  * Patch libdrm to default to device permission 666 so we don't have to do it
    in xorg.conf. The only way libdrm can do anything is through the server
    anyway. This can still be overridden by a user's xorg.conf. This change
    also requires adding quilt to the build-depends

 -- David Nusinow <dnusinow@debian.org>  Sun, 15 Apr 2007 13:08:50 -0400

libdrm (2.3.0-2) unstable; urgency=low

  * Update my email address in debian/control.
  * Add XS-Vcs-Git and XS-Vcs-Browser in debian/control.
  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Thu, 12 Apr 2007 19:06:57 +0200

libdrm (2.3.0-1) experimental; urgency=low

  [ Thierry Reding ]
  * New upstream release.
  * Set the Debian X Strike Force as maintainer.
  * Add myself to uploaders.
  * Add a debugging symbol package for libdrm2.

  [ Julien Cristau ]
  * Bump shlibs to libdrm2 >= 2.3.0.
  * Add myself to uploaders.
  * Add build-dep on dpkg-dev >= 1.13.19 to make sure that the binary:Version
    substvar is available.
  * libdrm2-dbg depends on libdrm2 (= ${binary:Version}).